added navigation link and logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 </head>
 <body>
     <header>
-
+        <div class="face">
+            <p class="face__logo"></p>
+            <p class="face__surname">ORLOV</p>
+            <div class="navigation">
+                <a class="navigation__link" href="/">портфолио</a>
+                <a class="navigation__link" href="/">компетенции</a>
+                <a class="navigation__link" href="/">услуги</a>
+                <a class="navigation__link" href="/">контакты</a>
+            </div>
+            <p class="face__p">Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов</p>
+            <h1 class="face__h1">Привет, я Саша — фронтенд разарботчик и дизайнер сайтов</h1>
+        </div>
     </header>
     <main>
 
