added chapters projects and competencies

--- a/index.html
+++ b/index.html
@@ -24,11 +24,58 @@
                 <a class="navigation__link" href="/">контакты</a>
             </div>
             <p class="face__p">Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов</p>
-            <h1 class="face__h1">Привет, я Саша — фронтенд разарботчик и дизайнер сайтов</h1>
+            <h1 class="face__headings">Привет, я Саша — фронтенд разарботчик и дизайнер сайтов</h1>
         </div>
     </header>
     <main>
-
+        <section class="project">
+            <div class="projects">
+                <h2 class="headings__2">Самые свежие проекты</h2>
+                <ul class="projects__new">
+                    <li class="projects__realhome">
+                        <h3 class="projects__h3">Realhome</h3>
+                        <p class="projects__p">дизайн,верстка, настройка</p>
+                    </li>
+                    <li class="projects__glass">
+                        <h3 class="projects__h3">GLASS</h3>
+                        <p class="projects__p">разработка интерфейса</p>
+                    </li>
+                    <li class="projects__fesiyen">
+                        <h3 class="projects__h3">Fesiyen</h3>
+                        <p class="projects__p">разработка интерфейса</p>
+                    </li>
+                </ul>
+                <a class="projects__all" href="/">Смотреть все проекты</a>
+            </div>
+        </section>
+        <section class="competencies">
+            <h2 class="headings__2">Мои компетенции</h2>
+            <ul class="my__competencies">
+                <li class="my__competencie">
+                    <img class="my__competencie__img html" src="/resources/html.png" alt="Изображение иконки html">
+                    <h4 class="my__competencie__h4">HTML и CSS</h4>
+                    <p class="my__competencie__p">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
+                </li>
+                <li class="my__competencie">
+                    <img class="my__competencie__img" src="/resources/js.png" alt="Изображение иконки javascript">
+                    <h4 class="my__competencie__h4">JavaScript</h4>
+                    <p class="my__competencie__p">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
+                </li>
+                <li class="my__competencie">
+                    <img class="my__competencie__img" src="/resources/atom.png" alt="Изображение иконки react.js">
+                    <h4 class="my__competencie__h4">Работа с библиотеками и фреймворками</h4>
+                    <p class="my__competencie__p">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+                </li>
+                <li class="my__competencie">
+                    <img class="my__competencie__img" src="/resources/phone.png" alt="Изображение иконки телефона">
+                    <h4 class="my__competencie__h4">Разработка для мобильных устройств и адаптивная верстка</h4>
+                    <p class="my__competencie__p">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+                </li>
+            </ul>
+        </section>
+        <section class="tascs">
+            <h2 class="headings__2 tascs__h2">Помогаю реализовать широкий спектр задач</h2>
+        </section>
     </main>
     <footer>
 
